change List to Arrays